p3/conf/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:            
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:            
  name: dev
