p3/conf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: inception-of-things
spec:
  rules:
  - http:
      paths:
      - path: "/argocd"
        pathType: Prefix
        backend:
          service:
            name: argocd
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  namespace: inception-of-things
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: playground
            port:
              number: 80
